Fixes form checkboxes gap

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -1232,13 +1232,13 @@ form {
   fieldset {
     border: none;
     padding: 0;
-    margin: 0;
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 
     legend {
-      padding: 0 0 1rem;
+      padding: 0 0 0.5rem;
       font-weight: 500;
       letter-spacing: 0.04em;
 
